[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menu/MenuGoBack.tscn" type="PackedScene" id=1]
[ext_resource path="res://code/menu/CustomDigMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/DoubleText.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets_old/fonts/Hezaedrus-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/menu/CharSelectGrid.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="ButtonGroup" id=1]
resource_name = "Columns"

[node name="CustomDig" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuGoBack" parent="." instance=ExtResource( 1 )]

[node name="Columns" type="Node2D" parent="."]
position = Vector2( -76.3275, 98.7767 )

[node name="ColText" parent="Columns" instance=ExtResource( 3 )]
text = "Columns"

[node name="Col5" type="Button" parent="Columns"]
margin_left = 140.0
margin_top = 50.0
margin_right = 290.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
group = SubResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col7" type="Button" parent="Columns"]
margin_left = 350.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( -331.738, 98.7343 )
custom_fonts/font = SubResource( 2 )
group = SubResource( 1 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col9" type="Button" parent="Columns"]
margin_left = 570.0
margin_top = 50.0
margin_right = 720.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( -331.738, 98.7343 )
custom_fonts/font = SubResource( 2 )
group = SubResource( 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharSelectGrid" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 200 )

[connection signal="back_select" from="MenuGoBack" to="." method="_on_MenuGoBack_back_select"]
